--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -22,25 +22,25 @@ spec:
               valueFrom :
                 configMapKeyRef :
                   name : db-config
-                  key :  host
+                  key :  mysql
 
             - name: DB_NAME  # Setting Database name from configMap
               valueFrom :
                 configMapKeyRef :
                   name : db-config
-                  key :  dbName
+                  key :  javatechie
 
             - name: DB_USERNAME  # Setting Database username from Secret
               valueFrom :
                 secretKeyRef :
                   name : mysql-secrets
-                  key :  username
+                  key :  root
 
             - name: DB_PASSWORD # Setting Database password from Secret
               valueFrom :
                 secretKeyRef :
                   name : mysql-secrets
-                  key :  password
+                  key :  root
 
 ---
 
